traces/bug_302.txt
#302
kv_engine/tests/testapp/testapp_getset.cc:978: error: Dead Store
  The value written to `&einvalCount` (type `int`) is never used.

kv_engine/tests/testapp/testapp_getset.cc:978:5: Write of unused value
976.     document.info.datatype = cb::mcbp::Datatype::Snappy;
977. 
978.     int einvalCount = getResponseCount(cb::mcbp::Status::Einval);
         ^
979.     try {
980.         userConnection->mutate(document, Vbid(0), MutationType::Append);
